--- a/app/src/main/res/layout/student_list_row.xml
+++ b/app/src/main/res/layout/student_list_row.xml
@@ -4,52 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground">
+    android:background="@drawable/customborder">
 
     <ImageView
         android:id="@+id/studentlistrow_avatar_img"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/avatar" />
-
-    <CheckBox
-        android:id="@+id/studentlistrow_cb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/studentlistrow_name_tv"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/avatar" />
 
     <TextView
         android:id="@+id/studentlistrow_name_tv"
-        android:layout_width="0dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/studentlistrow_id_tv"
-        app:layout_constraintEnd_toStartOf="@+id/studentlistrow_cb"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/studentlistrow_avatar_img"
+        app:layout_constraintEnd_toStartOf="@+id/studentlistrow_avatar_img"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/studentlistrow_id_tv"
-        android:layout_width="0dp"
+        android:layout_width="82dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/studentlistrow_id_tv2"
+        app:layout_constraintEnd_toStartOf="@+id/studentlistrow_avatar_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/studentlistrow_name_tv" />
+
+    <TextView
+        android:id="@+id/studentlistrow_id_tv2"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/studentlistrow_id_tv3"
+        app:layout_constraintEnd_toStartOf="@+id/studentlistrow_avatar_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/studentlistrow_id_tv" />
+
+    <TextView
+        android:id="@+id/studentlistrow_id_tv3"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/studentlistrow_cb"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/studentlistrow_avatar_img"
-        app:layout_constraintTop_toBottomOf="@+id/studentlistrow_name_tv" />
+        app:layout_constraintEnd_toStartOf="@+id/studentlistrow_avatar_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/studentlistrow_id_tv2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
