--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -51,8 +51,8 @@
     </fragment>
     <action android:id="@+id/action_global_addStudentFragment" app:destination="@id/addStudentFragment" />
     <fragment
-        android:id="@+id/aboutFragment"
-        android:name="com.example.me2you.AboutFragment"
-        android:label="About"
-        tools:layout="@layout/fragment_about" />
+        android:id="@+id/profileFragment"
+        android:name="com.example.me2you.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
