--- a/app/src/main/res/layout/fragment_my_items.xml
+++ b/app/src/main/res/layout/fragment_my_items.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1601FE"
-    tools:context=".BlueFragment">
+    tools:context=".MyItemsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
