--- a/app/src/main/res/menu/bar_menu.xml
+++ b/app/src/main/res/menu/bar_menu.xml
@@ -10,6 +10,7 @@
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Profile" />
     <item
+        android:id="@+id/myItemsFragment"
         android:icon="@drawable/ic_baseline_featured_play_list_24"
         android:title="My Items" />
 </menu>
