--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,8 +14,8 @@
     <fragment
         android:id="@+id/myItemsFragment"
         android:name="com.example.me2you.MyItemsFragment"
-        android:label="fragment_blue"
-        tools:layout="@layout/fragment_my_items" >
+        android:label="My Items"
+        tools:layout="@layout/fragment_my_items">
         <argument
             android:name="blueTitle"
             app:argType="string" />
