--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
+    android:label="profile"
     app:startDestination="@id/studentsListFragment">
 
     <fragment
         android:id="@+id/studentsListFragment"
         android:name="com.example.me2you.ui.PostListFragment"
         android:label="Shared Items"
-        tools:layout="@layout/fragment_post_list">
-    </fragment>
+        tools:layout="@layout/fragment_post_list"></fragment>
     <fragment
         android:id="@+id/myItemsFragment"
         android:name="com.example.me2you.ui.MyItemsFragment"
@@ -20,6 +20,22 @@
             android:name="blueTitle"
             app:argType="string" />
     </fragment>
+
+    <fragment
+        android:id="@+id/navigation_edit_profile"
+        android:name="com.example.me2you.ui.EditProfileFragment"
+        android:label="Edit Profile"
+        tools:layout="@layout/fragment_edit_profile">
+        <argument
+            android:name="userName"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="profileUrl"
+            app:argType="android.net.Uri"
+            app:nullable="true" />
+    </fragment>
+
     <fragment
         android:id="@+id/addPostFragment"
         android:name="com.example.me2you.ui.AddPostFragment"
@@ -60,8 +76,13 @@
         android:id="@+id/profileFragment"
         android:name="com.example.me2you.ui.ProfileFragment"
         android:label="My Profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_navigation_profile_to_edit_profile"
+            app:destination="@id/navigation_edit_profile" />
+    </fragment>
     <action
         android:id="@+id/action_global_addPostFragment"
         app:destination="@id/addPostFragment" />
+
 </navigation>
